added new pages

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
-VUE_APP_DOMAIN= dev-31n1sjyn.auth0.com
+VUE_APP_AUTH0_DOMAIN= dev-31n1sjyn.auth0.com
 
 VUE_APP_CLIENT_ID = aeCudX8U1MbyZGcZN4IN7nnS4vmmJZLs
+
+VUE_APP_API_KEY = 23d3e5b3f085a72f85a21217806d544d
